--- a/client/src/components/modules/SingleProgress.css
+++ b/client/src/components/modules/SingleProgress.css
@@ -7,11 +7,14 @@
 
 .SingleProgress-subcontainer {
   display: flex;
+  align-items: center;
 }
   
 
 .SingleProgress-decrement {
   display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: "Baloo 2", cursive;
   font-size: 15px;
   padding: 5px;
@@ -21,7 +24,8 @@
   color: var(--beige);
   background-color: #ff2045b6;
   /* display: inline-block; */
-  border-radius: 20px;
+  border-radius: 50%;
+  width: 20px; height: 20px;
   mix-blend-mode: normal;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -29,6 +33,8 @@
 
 .SingleProgress-increment {
   display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: "Baloo 2", cursive;
   font-size: 15px;
   padding: 5px;
@@ -38,7 +44,8 @@
   color: var(--beige);
   background-color: #02b136b6;
   /* display: inline-block; */
-  border-radius: 20px;
+  border-radius: 50%;
+  width: 20px; height: 20px;
   mix-blend-mode: normal;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
